@@ -49,26 +49,44 @@
 
 package com.openexchange.java;
 
-import junit.framework.JUnit4TestAdapter;
-import junit.framework.Test;
-import junit.framework.TestSuite;
+import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import org.junit.Test;
+
 
 /**
- * {@link UnitTests}
+ * {@link HTMLDetectorTest}
  *
- * @author <a href="mailto:marcus.klein@open-xchange.com">Marcus Klein</a>
+ * @author <a href="mailto:thorben.betten@open-xchange.com">Thorben Betten</a>
  */
-public class UnitTests {
+public class HTMLDetectorTest {
 
-    public UnitTests() {
+    /**
+     * Initializes a new {@link HTMLDetectorTest}.
+     */
+    public HTMLDetectorTest() {
         super();
     }
 
-    public static Test suite() {
-        final TestSuite tests = new TestSuite();
-        tests.addTest(new JUnit4TestAdapter(AutoboxingTest.class));
-        tests.addTest(new JUnit4TestAdapter(com.openexchange.java.HTMLDetectorTest.class));
-        return tests;
+    @Test
+    public final void testDetectJSEventHandler() {
+        try {
+            final byte[] svgImage = ("<svg onload=\"alert(document.domain)\" xmlns=\"http://www.w3.org/2000/svg\"\n" +
+                "        xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n" +
+                "        xmlns:ev=\"http://www.w3.org/2001/xml-events\"\n" +
+                "        version=\"1.1\" baseProfile=\"full\"\n" +
+                "        width=\"700px\" height=\"400px\" viewBox=\"0 0 700 400\">\n" +
+                "    <text x=\"20\" y=\"40\">oha!</text>\n" +
+                "</svg>").getBytes();
+
+            boolean containsHTMLTags = HTMLDetector.containsHTMLTags(new ByteArrayInputStream(svgImage), false);
+
+            org.junit.Assert.assertTrue("HTMLDetector should have found \"onload\" JavaScript event handler.", containsHTMLTags);
+        } catch (IOException e) {
+            e.printStackTrace();
+            org.junit.Assert.fail(e.getMessage());
+        }
+
     }
 
 }
